--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /*.txt
 # ignore cmake_bin dir
 **/cmake_bin
+# ignore qt build files
+**/build-src-Desktop_Qt_5_13_2_MSVC2017_64bit-Release
+**/build-src-Desktop_Qt_5_13_2_MSVC2017_64bit-Debug
